# openbb_akshare

./: .gitignore  README.md  pyproject.toml
docs/: openbb_akshare.ipynb
openbb_akshare/: __init__.py
openbb_akshare/models/: equity_historical.py  equity_profile.py  equity_quote.py  etf_historical.py  index_constituents.py  index_historical.py  index_search.py  index_snapshots.py
openbb_akshare/utils/: helpers.py
tests/: conftest.py  test_equity_historical.py  test_etf_historical.py  test_index_constituents.py  test_index_etf_integration.py  test_index_historical.py  test_index_search.py  test_index_snapshots.py
