[tool.poetry]
name = "openbb-akshare"
version = "1.1.3"
description = "AKShare extension for OpenBB"
authors = ["Roger Ye <shugaoye@yahoo.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_akshare" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
akshare = "1.18.19"
openbb = "4.6.0"
openbb-core = { version = "^1.5.8" }
mysharelib = "^1.0.4"
ipywidgets = "^8.1.7"
uvicorn = "^0.40.0"

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.5.4" }
ipykernel = "^6.30.1"
pytest = "^9.0.1"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
akshare = "openbb_akshare.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
akshare = "openbb_akshare:provider"
