[tool.poetry]
name = "openbb-akshare"
version = "1.2.0"
description = "AKShare extension for OpenBB"
authors = ["Roger Ye <shugaoye@yahoo.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_akshare" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
akshare = "1.18.56"
openbb = "4.7.1"
openbb-core = { version = "^1.6.8" }
mysharelib = "^1.0.5"
ipywidgets = "^8.1.7"
uvicorn = "^0.40.0"

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.6.6" }
ipykernel = "^7.2.0"
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
akshare = "openbb_akshare.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
akshare = "openbb_akshare:provider"
